testsuite/tests/typecheck/should_fail/T12694.hs
{-# LANGUAGE GADTs #-}
module T12694 where

f :: Bool ~ Int => a -> b
f x = x
